Fix dropdown overflow in table-responsive

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -27,6 +27,12 @@ main {
     border-bottom-width: 0;
 }
 
+.table-responsive .dropdown,
+.table-responsive .btn-group,
+.table-responsive .btn-group-vertical {
+    position: static;
+}
+
 .nav-tabs {
     --bs-nav-tabs-link-hover-border-color: var(--bs-border-color);
     --bs-nav-tabs-link-active-bg: rgba(var(--bs-tertiary-bg-rgb),var(--bs-bg-opacity))!important;
